--- a/styles.css
+++ b/styles.css
@@ -70,11 +70,11 @@ section {
 /* section travail */
 .travail {
   color: brown;
-  padding: 2%;
-  margin: 2%;
+  padding: 4%;
+  margin: 5%;
 }
 .travail iframe {
-  margin-right: 4%;
+  margin-right: 6%;
   width: 300px;
   min-height: 300px;
 }
@@ -100,20 +100,22 @@ section {
     margin: 5px;
   }
   input, textarea{
-
     margin: 5px;
     padding: 5px;
     width: 25%;
   }
   button{
     display: block;
-    margin: 2px;
-    background-color: #444;
+    margin: 10px;
+    background-color: #8a3838;
     color:white;
-
-    padding: 5px;
+    border:none;
+    padding: 10px;
+    transition: background-color 0.3s;
   }
-
+  button:hover{
+    background-color: #5a1a1ad8;
+  }
 }
 
 /* ************************************************************************************************** */
